# launcher

./: Cargo.toml  README.md
plugins/: Cargo.toml
plugins/src/: lib.rs
plugins/src/calc/: mod.rs
plugins/src/desktop_entries/: mod.rs
plugins/src/files/: mod.rs
plugins/src/find/: mod.rs
plugins/src/pulse/: mod.rs
plugins/src/recent/: mod.rs
plugins/src/scripts/: mod.rs
plugins/src/terminal/: mod.rs
plugins/src/web/: config.rs  mod.rs
service/: Cargo.toml
service/src/: client.rs  lib.rs
service/src/plugins/: config.rs  help.rs  mod.rs
toolkit/: Cargo.toml
toolkit/examples/: man-pages-plugin.rs
toolkit/src/: lib.rs  plugin_trait.rs
